# ramcharitmanas-chatbot

./: README.md  pyproject.toml  requirements.txt
ingestion/: ingest.py
src/: main.py  streamlit_app.py
src/responder/: response_generation.py
src/retrievers/: retrieval.py  sample.txt
